--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
                   </div>
                 </div>
               </section>
+              <!-- service btn -->
               <a href="#!" class="btn service__btn">All Services</a>
             </div>
           </div>
