--- a/index.html
+++ b/index.html
@@ -364,6 +364,18 @@
       </div>
       </div>
     </section>
+    <!-- CTA -->
+    <section class="cta">
+      <div class="container">
+        <section class="cta__inner">
+          <h2 class="cta__heading section-heading">Always welcoming new patients</h2>
+          <div class="cta__underline"></div>
+          <p class="cta__desc section-desc">Take control of your dental health and get the personalized care you
+            deserve. Call (541) 772-8846 to schedule</p>
+          <a href="#!" class="btn cta__appointment">Appointment</a>
+        </section>
+      </div>
+    </section>
   </main>
 </body>
 
