--- a/index.html
+++ b/index.html
@@ -149,9 +149,10 @@
         </p>
         <div class="service__row">
           <!-- service left -->
-          <figure>
+          <img src="./assets/image/service-1.jpg" alt="Our services" class="service__img" />
+          <!-- <figure>
             <img src="./assets/image/service-1.jpg" alt="Our services" class="service__img" />
-          </figure>
+          </figure> -->
           <!-- service right -->
           <div class="service__list">
             <!-- item 1 -->
@@ -256,10 +257,12 @@
         <div class="about-body">
           <!-- about left -->
           <div class="about__media">
-            <figure class="about__img">
+            <img src="./assets/image/about1.jpg" alt="Take back your smile with shine." class="about__img--back">
+            <img src="./assets/image/about2.jpg" alt="Take back your smile with shine." class="about__img--front">
+            <!-- <figure class="about__img">
               <img src="./assets/image/about1.jpg" alt="Take back your smile with shine." class="about__img--back">
               <img src="./assets/image/about2.jpg" alt="Take back your smile with shine." class="about__img--front">
-            </figure>
+            </figure> -->
           </div>
 
           <!-- about right -->
@@ -426,7 +429,7 @@
     <div class="container">
       <div class="footer__inner">
         <!-- column1 -->
-        <div class="footer__column">
+        <div class="footer__column footer-hidden-tablet">
           <a href="#!">
             <img src="./assets/image/footer-logo.svg" alt="shine smile" class="footer__logo">
           </a>
